--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         npm install
     - name: Build
       run: |
-        ionic build --prod -- --base-href 'https://hoodaajay99.github.io/ionic-github-pages-demo/'
+        ionic build --prod -- --base-href 'https://codeInstane.github.io/ionic-github-pages-test/'
         ls www
 
     - name: Deploy
