--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,10 @@ jobs:
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2      
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      #with:
+        #github_token: ${{ secrets.GITHUB_TOKEN }}
+        #publish_dir: ./public
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: www
