--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,8 @@ name: Build and Deploy
 
 on: [push]
 
+
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -32,6 +34,7 @@ jobs:
         #github_token: ${{ secrets.GITHUB_TOKEN }}
         #publish_dir: ./public
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: www
+        #PUBLISH_DIR: www
+        publish_dir: ./public
