--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,10 @@ name: Build and Deploy
 
 on: [push]
 
-
+permissions:
+  contents: write
+  pages: write
+  issues: read
 
 jobs:
   build-and-deploy:
@@ -37,8 +40,3 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: www
-<<<<<<< HEAD
-        
-=======
-        #publish_dir: ./public
->>>>>>> 9265a2e9f6ed6e33d0c6ea061b7ababa9930ce7a
