--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,40 @@
-name: Build and Deploy
+name: GitHub Pages
 
-on: 
+on:
   push:
     branches:
       - main
-  schedule:
-      - cron: "22 22 * * *"
-  workflow_dispatch:
-
-
+  pull_request:
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    
+  deploy:
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
     concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}  
-      
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-    - name: Use coturiv/setup-ionic
-      uses: coturiv/setup-ionic@v1
-      with:
-        cordova-version: 8
-        install-java: false
-        install-pods: false
+      - uses: actions/checkout@v3
 
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
 
-    - name: Install NPM Modules
-      run: |
-        npm i -D -E @angular/cli
-        npm install
-        
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-    - name: Build
-      run: |
-        ionic build --prod -- --base-href 'https://codeInstane.github.io/ionic-github-pages-test/'
-        ls www
-        
-        
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: www
-        enable_jekyll: true
+      - run: npm ci
+      - run: npm run build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: www
