--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,11 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm ci
-      - run: npm run build
+      #- run: npm run build
+      - name: Build
+        run: |
+            ionic build --prod -- --base-href 'https://codeInstane.github.io/ionic-github-pages-test/'
+            ls www
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -38,3 +42,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: www
+          enable_jekyll: true
