--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,5 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: www
+          publish_dir: ./public
           enable_jekyll: true
